--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy<2.0
-stable-retro @ git+https://github.com/Farama-Foundation/stable-retro.git@ea5ce51ab558f78ee2cdc460d854f66e4ca3d50b
+stable-retro @ git+https://github.com/Farama-Foundation/stable-retro.git
 torch
 PyYAML
 tensorboard
