--- a/config.yaml
+++ b/config.yaml
@@ -1,17 +1,17 @@
 log:
   name: "replicate_90s"
-  logdir: "./runs/test/"
+  logdir: "./runs/"
   log_frequency: 10000
   save_steps: 200000
 
-n_steps: 12800000 # calculated as n_training_steps * training_interval
+n_steps: 2_000_000
 training_interval: 4 # numer of steps between sgd optimization steps
 replay_buffer_fill_samples: 10000 # number of samples to fill buffer with before starting
 replay_memory_size: 200000 # size of the replay_buffer
-copy_steps: 40000 # steps between online_dqn -> training_dqn, 10_000 * training_interval
+copy_steps: 40000 # steps between online_dqn
 eps_max: 1 # exploration start/max probability
 eps_min: 0.1 # exploration end/min probability
-eps_decay_steps: 400000 # steps until eps_min, 100_000 * training_interval
+eps_decay_steps: 400_000 # steps until eps_min
 batch_size: 50
 
 dqn:
@@ -33,5 +33,5 @@ environment:
   scenario: "./scenario.json"
   max_episode_steps: 5400 # 90s * 60fps
   n_action_repeats: 20 # number of steps to repeat every action
-  frame_diff_length: 2 #5 # motion blur current frame with frame frame_diff length before
+  frame_diff_length: 2 # motion blur current frame with frame frame_diff length before
 
