--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,10 @@
 log:
-  name: "mha_revised_scenario_noblur"
-  logdir: "./runs/debug/"
+  name: "mha_rewards"
+  logdir: "./runs/mha/"
   log_frequency: 10000
   save_steps: 200000
 
-    #resume: "./runs/runs/log_240630-1533/2000000.pt"
+#resume: "./runs/runs/log_240630-1533/2000000.pt"
 n_steps: 12800000 # calculated as n_training_steps * training_interval
 training_interval: 2 # numer of steps between sgd optimization steps
 replay_buffer_fill_samples: 100 #101 # number of episodes to fill buffer with before starting
@@ -31,9 +31,7 @@ dqn:
     nesterov: True
 
 environment:
-  render_mode: None # human or None
-  scenario: "./scenario.json"
-  max_episode_steps: 5400 #90s #10800 # 3 minutes, 3 * 60 * 60
+  render_mode: null # human or None
+  scenario: "./rewards.json"
+  max_episode_steps: null # in frames (60 fps)
   n_action_repeats: 20 # number of steps to repeat every action
-    #frame_diff_length: 2 #5 # motion blur current frame with frame frame_diff length before
-
